--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,27 @@
-name: Build DLL
+name: Build and Upload Artifact
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.1
 
       - name: Build Solution
-        run: msbuild WebSocketDLL.vcxproj /p:Configuration=Release
+        run: msbuild WebSocketDLL.sln /p:Configuration=Release
 
-      - name: Upload DLL artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload WebSocketDLL Artifact
+        uses: actions/upload-artifact@v4.6.2
         with:
           name: WebSocketDLL
           path: ./Release/WebSocketDLL.dll
